--- a/index.html
+++ b/index.html
@@ -26,11 +26,20 @@
     <title>Frontend Mentor | QR Code Component</title>
   </head>
   <body>
-    <main class="container-fluid" id="alpha">
-      <div class="container beta" id="beta">
-        <img src="images/image-qr-code.png" alt="qr-code" />
+    <main class="container rounded h-100" id="alpha">
+      <div class="container d-flex justify-content-center" id="beta">
+        <img
+          class="img-fluid rounded"
+          id="hero-img"
+          src="images/image-qr-code.png"
+          alt="qr-code"
+        />
       </div>
-      <div class="container" id="charlie">
+
+      <div
+        class="container d-flex flex-column align-content-center"
+        id="charlie"
+      >
         <p>Improve your front-end skills by building projects</p>
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
