--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </div>
 
         <div class="container text-center my-4" id="text-container">
-          <p class="fs-2 fw-bold mb-3" id="hero-text">
+          <h1 class="fs-2 fw-bold mb-3" id="hero-text">
             Improve your front-end skills by building projects
-          </p>
+          </h1>
           <p class="fs-5 fw-light" id="sidekick-text">
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
