--- a/index.html
+++ b/index.html
@@ -27,37 +27,35 @@
     <title>Frontend Mentor | QR Code Component</title>
   </head>
   <body>
-    <main class="container min-vh-100" id="main-container">
-      <div
-        class="container bg-light rounded position-absolute top-50 start-50 translate-middle"
-        id="secondary-container"
-      >
-        <div class="container my-4" id="image-container">
-          <img
-            class="img-fluid rounded mx-auto d-block"
-            id="hero-img"
-            src="images/image-qr-code.png"
-            alt="qr-code"
-          />
-        </div>
+    <main
+      class="container d-flex flex-column justify-content-center align-items-center min-vh-100"
+      id="main-container"
+    >
+      <div class="container rounded p-4 bg-light" id="second-container">
+        <img
+          class="img-fluid rounded mb-4 mx-auto d-block"
+          id="hero-img"
+          src="images/image-qr-code.png"
+          alt="QR code to frontendmentor.io"
+        />
 
-        <div class="container text-center my-4" id="text-container">
-          <h1 class="fs-2 fw-bold mb-3" id="hero-text">
-            Improve your front-end skills by building projects
-          </h1>
-          <p class="fs-5 fw-light" id="sidekick-text">
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
-        </div>
+        <h1 class="fs-2 fw-bold mb-4 text-center" id="hero-text">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="fs-5 fw-light mb-4 text-center" id="sidekick-text">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
       </div>
     </main>
+
     <footer id="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
