Update CSS Media Queries

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
       class="container d-flex flex-column justify-content-center align-items-center min-vh-100"
       id="main-container"
     >
-      <div class="container rounded p-4 bg-light" id="second-container">
+      <div class="container rounded p-3 bg-light" id="second-container">
         <img
-          class="img-fluid rounded mb-4 mx-auto d-block"
+          class="rounded mb-3 mx-auto d-block"
           id="hero-img"
           src="images/image-qr-code.png"
           alt="QR code to frontendmentor.io"
         />
 
-        <h1 class="fs-2 fw-bold mb-4 text-center" id="hero-text">
+        <h1 class="mb-4 text-center" id="hero-text">
           Improve your front-end skills by building projects
         </h1>
-        <p class="fs-5 fw-light mb-4 text-center" id="sidekick-text">
+        <p class="mb-4 text-center" id="sidekick-text">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
