--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       class="container d-flex flex-column justify-content-center align-items-center min-vh-100"
       id="main-container"
     >
-      <div class="container rounded p-3 bg-light" id="second-container">
+      <div class="container p-3 bg-light" id="second-container">
         <img
-          class="rounded mb-3 mx-auto d-block"
+          class="mb-3 mx-auto d-block"
           id="hero-img"
           src="images/image-qr-code.png"
           alt="QR code to frontendmentor.io"
