--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="darktheme.css" />
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="sanitize.css" />
     <link rel="stylesheet" href="styles.css" />
     <title>Frontend Mentor | QR Code Component</title>
   </head>
