--- a/index.html
+++ b/index.html
@@ -26,34 +26,23 @@
     <title>Frontend Mentor | QR Code Component</title>
   </head>
   <body>
-    <main
-      class="container d-flex flex-column justify-content-center align-items-center min-vh-100"
-      id="main-container"
-    >
-      <div class="container p-3 bg-light" id="second-container">
-        <img
-          class="mb-3 mx-auto d-block"
-          id="hero-img"
-          src="images/image-qr-code.png"
-          alt="QR code to frontendmentor.io"
-        />
+    <main class="container">
+      <div id="secondary-container">
+      <img
+        id="qr-code"
+        src="images/image-qr-code.png"
+        alt="QR code to frontendmentor.io"
+      />
 
-        <h1 class="mb-4 text-center" id="hero-text">
-          Improve your front-end skills by building projects
-        </h1>
-        <p class="mb-4 text-center" id="sidekick-text">
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
-      </div>
+      <h1 id="hero-text">
+        Improve your front-end skills by building projects
+      </h1>
+      <p id="sidekick-text">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </div>
     </main>
-
-    <footer id="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
